--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -161,7 +161,8 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
   .left-sidebar-container {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    overflow-y: scroll;
+    /* overflow: hidden; */
+    overflow-y: auto;
     max-width: 100%;
     max-height: 100%;
     width: 100%;
@@ -2166,7 +2167,7 @@ which content to show on each sub panel
 
 /*-------------nav area / inbox list ------------*/
 nav[aria-label='messages inbox'] {
-  overflow-y: auto;
+  /* overflow-y: auto; */
   height: 100%;
 }
 
@@ -2230,6 +2231,7 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
 
 .chat-content-overrides {
   display: grid;
+  flex: 1;
 }
 
 .chat-content-overrides > * {
@@ -2239,9 +2241,14 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
   visibility: hidden;
 }
 
+/* .chat-content-overrides .chat-content-body {
+  max-height: 100dvh;
+} */
+
 .active-chat {
   z-index: 1;
-  height: 100%;
+  height: 100dvh;
+  padding-bottom: 2rem;
   opacity: 1;
   visibility: visible;
 }
