--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -268,6 +268,12 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
   }
 }
 
+@media (max-width: 991px) {
+  .hide-left-nav-bar {
+    transform: translateX(100%) !important;
+  }
+}
+
 /* desktop  media quuries*/
 @media (min-width: 992px) {
   /* @media (min-width: 768px) { */
