fix: scrolling issue on chat contents and information slider menu is now showing

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -11,25 +11,26 @@
   --left-content-width: 350px;
   --inset-shadow-sm: inset 0 2px 4px rgb(0 0 0 / 0.05);
   --inbox-header-max-height: 56px;
+  --chat-content-header-max-height: 68px;
 }
 
 /* Specific Styles for Item Description and Custom Fields */
-[data-bs-theme='dark'] .item-desc,
-[data-bs-theme='dark'] .custom-fields {
+[data-bs-theme="dark"] .item-desc,
+[data-bs-theme="dark"] .custom-fields {
   border: 1px solid #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
 }
 
 /* Styles for Placeholders */
-[data-bs-theme='light'] .picture-placeholder,
-[data-bs-theme='light'] .file-container {
+[data-bs-theme="light"] .picture-placeholder,
+[data-bs-theme="light"] .file-container {
   background-color: #f9f9f9;
   color: #333; /* Ensure light mode placeholder text is visible */
 }
 
-[data-bs-theme='dark'] .picture-placeholder,
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .picture-placeholder,
+[data-bs-theme="dark"] .file-container {
   border: 2px dashed #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
@@ -40,11 +41,11 @@
 /*   border-style: solid; */
 /* } */
 
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .file-container {
   border-style: solid;
 }
 
-[data-bs-theme='dark'] .items-card-text.editable {
+[data-bs-theme="dark"] .items-card-text.editable {
   color: #333;
 }
 
@@ -203,8 +204,16 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar ul li:not(:last-child),
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child),
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child) {
     transform: translateY(0);
     opacity: 1;
     max-height: 100%;
@@ -214,25 +223,46 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar > ul li > label > svg,
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg,
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg {
     transform: rotate(360deg);
   }
 
   /* close state */
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar {
     transform: translateX(1.5rem);
     transition-delay: 0.21s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul {
     gap: 0;
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul li:not(:last-child),
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul
+    li:not(:last-child),
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
     transform: translateY(20px);
     opacity: 0;
@@ -242,7 +272,13 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse > ul li > label > svg,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    > ul
+    li
+    > label
+    > svg,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
     transform: rotate(180deg);
   }
@@ -624,7 +660,9 @@ section {
   line-height: 1.4;
   padding: 4px 8px;
   border-radius: 6px;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   cursor: text;
   background-color: #f9f9f9;
 }
@@ -664,7 +702,9 @@ section {
   color: #374151;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
 }
 
 .project-alpha-action-button:hover {
@@ -749,7 +789,9 @@ section {
   border: 1px solid #d1d5db;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   display: none;
 }
 
@@ -781,7 +823,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   position: absolute;
   bottom: 20px; /* Position it at the bottom */
   right: 20px; /* Keep it aligned to the right */
@@ -1057,15 +1101,21 @@ section {
   }
 
   .mobile-stack .accordion-container {
-    transition: min-height 0.15s ease-out, max-height 0.15s ease-out;
+    transition:
+      min-height 0.15s ease-out,
+      max-height 0.15s ease-out;
   }
 
   /* container accordion close */
   .mobile-stack .accordion-container.triggered {
     --accordion-column-to-show: 1;
     --accordion-column-height: 44px;
-    min-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
-    max-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
+    min-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
+    max-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
     overflow: hidden;
   }
 
@@ -1075,11 +1125,15 @@ section {
     visibility: hidden;
     opacity: 0;
     transition-behavior: allow-discrete;
-    transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
+    transition:
+      opacity 0.15s ease-out,
+      visibility 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container > *:not(:nth-child(1)) {
-    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
+    transition:
+      transform 0.15s ease-out,
+      opacity 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container.triggering > *:not(:nth-child(1)) {
@@ -1108,23 +1162,33 @@ section {
     color: inherit;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta,
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta,
   .mobile-stack .accordion-container.triggered .accordion-trigger {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta {
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.1s ease-in, transform 0.1s ease-in;
+    transition:
+      opacity 0.1s ease-in,
+      transform 0.1s ease-in;
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accordion-meta {
     opacity: 0;
     transform: translateY(10px);
-    transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+    transition:
+      opacity 0.1s ease-out,
+      transform 0.1s ease-out;
   }
 
   /* icon */
@@ -1135,7 +1199,8 @@ section {
   }
 
   .mobile-stack .accordion-container td:has(.accordion-trigger) {
-    border-bottom: var(--falcon-border-width) var(--falcon-border-style) var(--falcon-border-color);
+    border-bottom: var(--falcon-border-width) var(--falcon-border-style)
+      var(--falcon-border-color);
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accor-open {
@@ -1171,7 +1236,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   border: none;
 }
 
@@ -1264,7 +1331,10 @@ section {
 .pictures-section {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* ensure a responsive design */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* ensure a responsive design */
   /* max-height: 350px; */
   /* to ensure there is no overflow */
   gap: 32px;
@@ -1311,11 +1381,14 @@ section {
   cursor: pointer;
   border-radius: 4px;
   overflow: hidden;
-  transition: border-color 0.1s ease, background-color 0.1s ease, max-height 0.1s ease;
+  transition:
+    border-color 0.1s ease,
+    background-color 0.1s ease,
+    max-height 0.1s ease;
 }
 
-.picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-.picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+.picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+.picture-placeholder:has(.uploaded-image[data-modular="270"]) .uploaded-image {
   max-width: 350px;
 }
 
@@ -1332,7 +1405,9 @@ section {
   background-color: inherit; /* git the background from parents instead for dark/light mode */
   border-radius: 4px;
   transform-origin: center;
-  transition: transform 0.2s ease, max-width 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    max-width 0.2s ease;
 }
 
 /* Add hover effect for better user experience */
@@ -1914,17 +1989,20 @@ div.gslide-media.gslide-inline {
 }
 
 @media (max-width: 768px) {
-  [data-bs-theme='light'] .file-container [data-bs-theme='light'] .picture-placeholder:has(img) {
+  [data-bs-theme="light"]
+    .file-container
+    [data-bs-theme="light"]
+    .picture-placeholder:has(img) {
     border-style: solid;
     border-width: 1px;
     /* border-color: #3c465280; */
   }
 
-  [data-bs-theme='light'] .picture-placeholder {
+  [data-bs-theme="light"] .picture-placeholder {
     border-color: transparent;
   }
 
-  [data-bs-theme='dark'] .picture-placeholder {
+  [data-bs-theme="dark"] .picture-placeholder {
     border-style: solid;
     border-width: 1px;
   }
@@ -1961,8 +2039,9 @@ div.gslide-media.gslide-inline {
     min-height: 350px;
   }
 
-  .picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-  .picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+  .picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+  .picture-placeholder:has(.uploaded-image[data-modular="270"])
+    .uploaded-image {
     /* height: 90%; */
     max-height: 92%;
   }
@@ -1972,7 +2051,9 @@ div.gslide-media.gslide-inline {
   .post1:hover .gallery-menu {
     visibility: visible;
     opacity: 100;
-    transition: visibility 0s linear 0.15s, opacity 0.25s ease-in-out;
+    transition:
+      visibility 0s linear 0.15s,
+      opacity 0.25s ease-in-out;
   }
 }
 
@@ -1985,8 +2066,8 @@ div.gslide-media.gslide-inline {
 
 /* for statuses of invoice */
 /* If data-status="due" */
-[data-status='due'] svg,
-[data-status='due'] p {
+[data-status="due"] svg,
+[data-status="due"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-danger-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -1994,8 +2075,8 @@ div.gslide-media.gslide-inline {
 }
 
 /* If data-status="completed" (better than "not-due") */
-[data-status='settled'] svg,
-[data-status='settled'] p {
+[data-status="settled"] svg,
+[data-status="settled"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-success-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -2089,7 +2170,11 @@ header first row, contents second row*/
   height: 0 !important; /* so it doesnt interfer with the active panel */
   opacity: 0;
   visibility: hidden;
-  transition: z-index 0.2s ease-in-out, opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, height 0.2s ease-in-out;
+  transition:
+    z-index 0.2s ease-in-out,
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out,
+    height 0.2s ease-in-out;
 }
 
 /* core logic for switching the panels*/
@@ -2131,7 +2216,9 @@ which content to show on each sub panel
   grid-area: 1/1;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out;
 }
 
 .inbox-active-title {
@@ -2196,17 +2283,17 @@ which content to show on each sub panel
 }
 
 /*-------------nav area / inbox list ------------*/
-nav[aria-label='messages inbox'] {
+nav[aria-label="messages inbox"] {
   /* overflow-y: auto; */
   height: 100%;
 }
 
-nav[aria-label='messages inbox'] ul {
+nav[aria-label="messages inbox"] ul {
   display: grid;
   height: 100%;
 }
 
-nav[aria-label='messages inbox'] .inbox-item-container {
+nav[aria-label="messages inbox"] .inbox-item-container {
   /* grid-template-columns: auto 1fr; */
   padding: 1rem;
   align-items: center;
@@ -2214,17 +2301,17 @@ nav[aria-label='messages inbox'] .inbox-item-container {
   justify-content: space-between;
 }
 
-nav[aria-label='messages inbox'] .inbox-item-container .avatar {
+nav[aria-label="messages inbox"] .inbox-item-container .avatar {
   place-self: start;
 }
 
-nav[aria-label='messages inbox'] .inbox-item .inbox-info,
-nav[aria-label='messages inbox'] .inbox-item time {
+nav[aria-label="messages inbox"] .inbox-item .inbox-info,
+nav[aria-label="messages inbox"] .inbox-item time {
   color: var(--falcon-heading-color);
   opacity: 0.85;
 }
 
-nav[aria-label='messages inbox'] .inbox-item .item-subject {
+nav[aria-label="messages inbox"] .inbox-item .item-subject {
   color: var(--falcon-heading-color);
   font-weight: 600;
 }
@@ -2252,7 +2339,7 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
 
 /*------ chat panel area---------*/
 .chat-container {
-  height: calc(100vh - var(--inbox-header-max-height));
+  height: calc(100dvh - var(--inbox-header-max-height));
 }
 
 .chat-sidebar-overrides {
@@ -2276,20 +2363,69 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
   grid-template-rows: auto 1fr auto;
 }
 
-/* .chat-content-overrides .chat-content-body {
-  max-height: 100dvh;
+.chat-content-overrides .chat-content-header {
+  max-height: var(--chat-content-header-max-height);
+}
+
+/* .chat-content-overrides
+  .chat-content-header
+  button[data-bs-toggle='offcanvas']
+  :has(.chat-content-overrides .chat-content-body .offcanvas.show) {
+  background-color: #007bff;
 } */
+
+.chat-content-overrides .chat-content-body {
+  background: var(--falcon-emphasis-bg);
+}
+
+.chat-content-overrides .chat-content-body .offcanvas {
+  position: fixed !important;
+  top: calc(
+    var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px
+  );
+}
+
+.chat-content-overrides .chat-content-body .offcanvas-backdrop {
+  z-index: 1;
+  top: calc(
+    var(--inbox-header-max-height) + var(--chat-content-header-max-height)
+  );
+}
+
+.chat-content-overrides .chat-editor-area .chat-file-upload,
+.chat-content-overrides .chat-editor-area .btn-send {
+  z-index: 0 !important;
+}
 
 .active-chat {
   z-index: 1;
-  height: 100%;
+  height: auto;
   opacity: 1;
   visibility: visible;
+}
+
+/* MEDia queries */
+
+@media (max-width: 425px) {
+  .chat-content-overrides .chat-content-body .offcanvas {
+    width: 100% !important;
+  }
 }
 
 @media (min-width: 992px) {
   .chat-sidebar-overrides {
     max-width: var(--left-content-width) !important;
+  }
+
+  .chat-content-overrides .chat-content-body .offcanvas {
+    max-width: var(--left-content-width) !important;
+    z-index: 1041;
+  }
+
+  .chat-content-overrides .chat-content-body .offcanvas-backdrop {
+    width: var(--left-content-width) !important;
+    right: 0 !important;
+    left: 100% !important;
   }
 }
 
