refactor: nav-n-content to panel-content, fix: email list img path

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -15,22 +15,22 @@
 }
 
 /* Specific Styles for Item Description and Custom Fields */
-[data-bs-theme="dark"] .item-desc,
-[data-bs-theme="dark"] .custom-fields {
+[data-bs-theme='dark'] .item-desc,
+[data-bs-theme='dark'] .custom-fields {
   border: 1px solid #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
 }
 
 /* Styles for Placeholders */
-[data-bs-theme="light"] .picture-placeholder,
-[data-bs-theme="light"] .file-container {
+[data-bs-theme='light'] .picture-placeholder,
+[data-bs-theme='light'] .file-container {
   background-color: #f9f9f9;
   color: #333; /* Ensure light mode placeholder text is visible */
 }
 
-[data-bs-theme="dark"] .picture-placeholder,
-[data-bs-theme="dark"] .file-container {
+[data-bs-theme='dark'] .picture-placeholder,
+[data-bs-theme='dark'] .file-container {
   border: 2px dashed #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
@@ -41,11 +41,11 @@
 /*   border-style: solid; */
 /* } */
 
-[data-bs-theme="dark"] .file-container {
+[data-bs-theme='dark'] .file-container {
   border-style: solid;
 }
 
-[data-bs-theme="dark"] .items-card-text.editable {
+[data-bs-theme='dark'] .items-card-text.editable {
   color: #333;
 }
 
@@ -54,6 +54,19 @@
 -----------------------------------------------*/
 .d-contents {
   display: contents !important;
+}
+
+.w-fit {
+  width: fit-content !important;
+}
+.max-w-fit {
+  max-width: fit-content !important;
+}
+.max-w-auto {
+  max-width: auto !important;
+}
+.h-100dvh {
+  height: 100dvh !important;
 }
 
 /*-----------------------------------------------
@@ -204,16 +217,8 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar
-    ul
-    li:not(:last-child),
-  .navbar-toggle.nav-only
-    ~ .page-wrapper
-    > .left-nav-bar
-    ul
-    li:not(:last-child) {
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar ul li:not(:last-child),
+  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
     transform: translateY(0);
     opacity: 1;
     max-height: 100%;
@@ -223,46 +228,25 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar
-    > ul
-    li
-    > label
-    > svg,
-  .navbar-toggle.nav-only
-    ~ .page-wrapper
-    > .left-nav-bar
-    > ul
-    li
-    > label
-    > svg {
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar > ul li > label > svg,
+  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
     transform: rotate(360deg);
   }
 
   /* close state */
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar.left-nav-collapse,
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar {
     transform: translateX(1.5rem);
     transition-delay: 0.21s;
   }
 
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar.left-nav-collapse
-    ul,
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul {
     gap: 0;
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar.left-nav-collapse
-    ul
-    li:not(:last-child),
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul li:not(:last-child),
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
     transform: translateY(20px);
     opacity: 0;
@@ -272,13 +256,7 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content
-    ~ .page-wrapper
-    > .left-nav-bar.left-nav-collapse
-    > ul
-    li
-    > label
-    > svg,
+  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse > ul li > label > svg,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
     transform: rotate(180deg);
   }
@@ -660,9 +638,7 @@ section {
   line-height: 1.4;
   padding: 4px 8px;
   border-radius: 6px;
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   cursor: text;
   background-color: #f9f9f9;
 }
@@ -702,9 +678,7 @@ section {
   color: #374151;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .project-alpha-action-button:hover {
@@ -789,9 +763,7 @@ section {
   border: 1px solid #d1d5db;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   display: none;
 }
 
@@ -823,9 +795,7 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   position: absolute;
   bottom: 20px; /* Position it at the bottom */
   right: 20px; /* Keep it aligned to the right */
@@ -1101,21 +1071,15 @@ section {
   }
 
   .mobile-stack .accordion-container {
-    transition:
-      min-height 0.15s ease-out,
-      max-height 0.15s ease-out;
+    transition: min-height 0.15s ease-out, max-height 0.15s ease-out;
   }
 
   /* container accordion close */
   .mobile-stack .accordion-container.triggered {
     --accordion-column-to-show: 1;
     --accordion-column-height: 44px;
-    min-height: calc(
-      var(--accordion-column-height) * var(--accordion-column-to-show)
-    );
-    max-height: calc(
-      var(--accordion-column-height) * var(--accordion-column-to-show)
-    );
+    min-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
+    max-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
     overflow: hidden;
   }
 
@@ -1125,15 +1089,11 @@ section {
     visibility: hidden;
     opacity: 0;
     transition-behavior: allow-discrete;
-    transition:
-      opacity 0.15s ease-out,
-      visibility 0.15s ease-out;
+    transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container > *:not(:nth-child(1)) {
-    transition:
-      transform 0.15s ease-out,
-      opacity 0.15s ease-out;
+    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container.triggering > *:not(:nth-child(1)) {
@@ -1162,33 +1122,23 @@ section {
     color: inherit;
   }
 
-  .mobile-stack
-    .accordion-container.triggered
-    .accordion-trigger
-    .accordion-meta,
+  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta,
   .mobile-stack .accordion-container.triggered .accordion-trigger {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
   }
 
-  .mobile-stack
-    .accordion-container.triggered
-    .accordion-trigger
-    .accordion-meta {
+  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta {
     opacity: 1;
     transform: translateY(0);
-    transition:
-      opacity 0.1s ease-in,
-      transform 0.1s ease-in;
+    transition: opacity 0.1s ease-in, transform 0.1s ease-in;
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accordion-meta {
     opacity: 0;
     transform: translateY(10px);
-    transition:
-      opacity 0.1s ease-out,
-      transform 0.1s ease-out;
+    transition: opacity 0.1s ease-out, transform 0.1s ease-out;
   }
 
   /* icon */
@@ -1199,8 +1149,7 @@ section {
   }
 
   .mobile-stack .accordion-container td:has(.accordion-trigger) {
-    border-bottom: var(--falcon-border-width) var(--falcon-border-style)
-      var(--falcon-border-color);
+    border-bottom: var(--falcon-border-width) var(--falcon-border-style) var(--falcon-border-color);
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accor-open {
@@ -1236,9 +1185,7 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   border: none;
 }
 
@@ -1331,10 +1278,7 @@ section {
 .pictures-section {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(300px, 1fr)
-  ); /* ensure a responsive design */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* ensure a responsive design */
   /* max-height: 350px; */
   /* to ensure there is no overflow */
   gap: 32px;
@@ -1381,14 +1325,11 @@ section {
   cursor: pointer;
   border-radius: 4px;
   overflow: hidden;
-  transition:
-    border-color 0.1s ease,
-    background-color 0.1s ease,
-    max-height 0.1s ease;
+  transition: border-color 0.1s ease, background-color 0.1s ease, max-height 0.1s ease;
 }
 
-.picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
-.picture-placeholder:has(.uploaded-image[data-modular="270"]) .uploaded-image {
+.picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
+.picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
   max-width: 350px;
 }
 
@@ -1405,9 +1346,7 @@ section {
   background-color: inherit; /* git the background from parents instead for dark/light mode */
   border-radius: 4px;
   transform-origin: center;
-  transition:
-    transform 0.2s ease,
-    max-width 0.2s ease;
+  transition: transform 0.2s ease, max-width 0.2s ease;
 }
 
 /* Add hover effect for better user experience */
@@ -1989,20 +1928,17 @@ div.gslide-media.gslide-inline {
 }
 
 @media (max-width: 768px) {
-  [data-bs-theme="light"]
-    .file-container
-    [data-bs-theme="light"]
-    .picture-placeholder:has(img) {
+  [data-bs-theme='light'] .file-container [data-bs-theme='light'] .picture-placeholder:has(img) {
     border-style: solid;
     border-width: 1px;
     /* border-color: #3c465280; */
   }
 
-  [data-bs-theme="light"] .picture-placeholder {
+  [data-bs-theme='light'] .picture-placeholder {
     border-color: transparent;
   }
 
-  [data-bs-theme="dark"] .picture-placeholder {
+  [data-bs-theme='dark'] .picture-placeholder {
     border-style: solid;
     border-width: 1px;
   }
@@ -2039,9 +1975,8 @@ div.gslide-media.gslide-inline {
     min-height: 350px;
   }
 
-  .picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
-  .picture-placeholder:has(.uploaded-image[data-modular="270"])
-    .uploaded-image {
+  .picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
+  .picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
     /* height: 90%; */
     max-height: 92%;
   }
@@ -2051,9 +1986,7 @@ div.gslide-media.gslide-inline {
   .post1:hover .gallery-menu {
     visibility: visible;
     opacity: 100;
-    transition:
-      visibility 0s linear 0.15s,
-      opacity 0.25s ease-in-out;
+    transition: visibility 0s linear 0.15s, opacity 0.25s ease-in-out;
   }
 }
 
@@ -2066,8 +1999,8 @@ div.gslide-media.gslide-inline {
 
 /* for statuses of invoice */
 /* If data-status="due" */
-[data-status="due"] svg,
-[data-status="due"] p {
+[data-status='due'] svg,
+[data-status='due'] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-danger-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -2075,8 +2008,8 @@ div.gslide-media.gslide-inline {
 }
 
 /* If data-status="completed" (better than "not-due") */
-[data-status="settled"] svg,
-[data-status="settled"] p {
+[data-status='settled'] svg,
+[data-status='settled'] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-success-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -2170,11 +2103,7 @@ header first row, contents second row*/
   height: 0 !important; /* so it doesnt interfer with the active panel */
   opacity: 0;
   visibility: hidden;
-  transition:
-    z-index 0.2s ease-in-out,
-    opacity 0.2s ease-in-out,
-    visibility 0.2s ease-in-out,
-    height 0.2s ease-in-out;
+  transition: z-index 0.2s ease-in-out, opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, height 0.2s ease-in-out;
 }
 
 /* core logic for switching the panels*/
@@ -2216,9 +2145,7 @@ which content to show on each sub panel
   grid-area: 1/1;
   opacity: 0;
   visibility: hidden;
-  transition:
-    opacity 0.2s ease-in-out,
-    visibility 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
 }
 
 .inbox-active-title {
@@ -2283,17 +2210,17 @@ which content to show on each sub panel
 }
 
 /*-------------nav area / inbox list ------------*/
-nav[aria-label="messages inbox"] {
+nav[aria-label='messages inbox'] {
   /* overflow-y: auto; */
   height: 100%;
 }
 
-nav[aria-label="messages inbox"] ul {
+nav[aria-label='messages inbox'] ul {
   display: grid;
   height: 100%;
 }
 
-nav[aria-label="messages inbox"] .inbox-item-container {
+nav[aria-label='messages inbox'] .inbox-item-container {
   /* grid-template-columns: auto 1fr; */
   padding: 1rem;
   align-items: center;
@@ -2301,24 +2228,29 @@ nav[aria-label="messages inbox"] .inbox-item-container {
   justify-content: space-between;
 }
 
-nav[aria-label="messages inbox"] .inbox-item-container .avatar {
+nav[aria-label='messages inbox'] .inbox-item-container .avatar {
   place-self: start;
 }
 
-nav[aria-label="messages inbox"] .inbox-item .inbox-info,
-nav[aria-label="messages inbox"] .inbox-item time {
+nav[aria-label='messages inbox'] .inbox-item .inbox-info,
+nav[aria-label='messages inbox'] .inbox-item time {
   color: var(--falcon-heading-color);
   opacity: 0.85;
 }
 
-nav[aria-label="messages inbox"] .inbox-item .item-subject {
+nav[aria-label='messages inbox'] .inbox-item .item-subject {
   color: var(--falcon-heading-color);
   font-weight: 600;
 }
 
 /*------------- email panel area  ------------*/
 
-.email-content {
+.email-nav-body > div {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+}
+
+email-content {
   overflow-y: auto;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
@@ -2380,16 +2312,12 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
 
 .chat-content-overrides .chat-content-body .offcanvas {
   position: fixed !important;
-  top: calc(
-    var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px
-  );
+  top: calc(var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px);
 }
 
 .chat-content-overrides .chat-content-body .offcanvas-backdrop {
   z-index: 1;
-  top: calc(
-    var(--inbox-header-max-height) + var(--chat-content-header-max-height)
-  );
+  top: calc(var(--inbox-header-max-height) + var(--chat-content-header-max-height));
 }
 
 .chat-content-overrides .chat-editor-area .chat-file-upload,
